--- a/scss/componentes/_pasos.scss
+++ b/scss/componentes/_pasos.scss
@@ -1,5 +1,5 @@
 #pasos {
-    padding: 20px 0;
+    padding-top: 20px ;
     background-color: $negro;
 
     
@@ -31,7 +31,7 @@
             }
         }
 
-        video {
+        video, img {
             box-shadow: 0px 0px 50px white;
             border-radius: 30px;
             bottom: 0px;
