aviso html tutoriales

--- a/scss/componentes/pags/_grupos.scss
+++ b/scss/componentes/pags/_grupos.scss
@@ -472,6 +472,10 @@
                                 font-weight: 700;
                                 border-bottom: #d8d8d8 1px solid;
                             }
+
+                            p {
+                                margin: 0px;
+                            }
                         }
                     }
     
