--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -192,6 +192,7 @@
                     }
 
                     button {
+                        color: black;
                         background: none;
                         padding-bottom: 0%;
                     }
