--- a/scss/componentes/_pasos.scss
+++ b/scss/componentes/_pasos.scss
@@ -4,10 +4,9 @@
 
     
     div {
-        @include sticky (2%);
-        padding: 20px 0;
+        @include sticky (5%);
+        padding: 20px 0 50px 0;
         background-color: $negro;
-        margin: 0 auto;
         @include flex (column, center);
 
         p {
@@ -47,52 +46,45 @@
 
 
     @media screen and (max-width: 961px){
-        padding: 50px;
 
-        div {
-            width: 650px;
-            padding-top: 20px;
+        div video, img {
+            height: 300px;
+            width: auto;
+        }
+    }  
+    
+    @media screen and (max-width: 720px){
 
-            .title {
-                width: 650px ;
-                font-size: 150px;
-                line-height: 120px;
-            }
+        div video, img {
+            width: 80%;
+            height: auto;
         }
     }   
 
-    @media screen and (max-width: 750px){
-        div {
-            width: 480px;
+    @media screen and (max-width: 560px){
 
-            .title {
-                width: 480px;
-                line-height: 100px;
-                font-size: 120px;
+        div {
+            height: 100vh;
+
+            video, img {
+                display: none;
             }
-        }
-    }
 
-    @media screen and (max-width: 500px){
-        div {
-            width: 350px ;
             .title {
-                width: 350px ;
+                margin: auto;
+                margin-bottom: 50px;
+                font-weight: 900;
                 font-size: 100px;
+                width: 80%;
+                line-height: 100px;
+                word-wrap: break-word;
             }
-        }
-    }
 
-    @media screen and (max-width: 400px){
-        padding: 20px;
-        div {
-            width: 300px ;
-            .title {
-                width: 300px ;
-                font-size: 120px;
-                line-height: 90px;
+            .explicacion {
+                margin: auto;
+                width: 80%;
+                font-size: 20px;
             }
         }
-    }
-    
+    }   
 }
